Added image upload & JavaScript

--- a/Design Elements.html
+++ b/Design Elements.html
@@ -12,16 +12,16 @@
     <!-- The purpose of this document is to design all of the elements that will be used to create the website, so that
      everything will look and feel the same, so that the website is cohesive. It will also speed up development by allowing me
      to copy paste my own code as I go along -->
-
-    <!-- Notifications and Friend Requests Bar -->
-<div class="notifications-holder">
-  <nav class="notifications-bar">
-    <!-- Logo (left side) -->
-    <img src="icons/logo.svg" class="logo" alt="logo">
-
-    <!-- Icons & SearchBar (right side) -->
-     <div class="searchWrapper">
-        <form method="get" class="searchBarForm">
+     
+     <!-- Notifications and Friend Requests Bar -->
+     <div class="notifications-holder">
+         <nav class="notifications-bar">
+             <!-- Logo (left side) -->
+             <img src="icons/logo.svg" class="logo" alt="logo">
+             
+             <!-- Icons & SearchBar (right side) -->
+             <div class="searchWrapper">
+                 <form method="get" class="searchBarForm">
             <input type="text" class="searchBarInput" placeholder="Search...">
             <img src="icons/Search.svg" class="searchIconInside" alt="Search">
         </form>
@@ -59,6 +59,10 @@
     <br>
     <br>
     <br>
+    <div class="positive-feedback-message-holder">
+        <h3 class="feedback-heading">📌 Posted</h3>
+        <p class="feedback-message">Time to scoop up some likes!</p>
+    </div>
     <!-- Posts -->
      <div class="holder-Post">
         <div class="topHolder-Post">
